--- a/package.json
+++ b/package.json
@@ -188,7 +188,11 @@
         "build": "tsc",
         "watch": "tsc --watch",
         "package": "vsce package",
-        "test": "vitest run"
+        "test": "vitest run",
+        "lint": "eslint src --ext .ts",
+        "lint:fix": "eslint src --ext .ts --fix",
+        "format": "prettier --write \"src/**/*.ts\"",
+        "format:check": "prettier --check \"src/**/*.ts\""
     },
     "dependencies": {
         "@octokit/rest": "^22.0.1",
@@ -199,7 +203,13 @@
     "devDependencies": {
         "@types/node": "^20.0.0",
         "@types/vscode": "^1.85.0",
+        "@typescript-eslint/eslint-plugin": "^8.48.0",
+        "@typescript-eslint/parser": "^8.48.0",
         "@vscode/vsce": "^2.22.0",
+        "eslint": "^9.39.1",
+        "eslint-config-prettier": "^10.1.8",
+        "eslint-plugin-prettier": "^5.5.4",
+        "prettier": "^3.6.2",
         "typescript": "^5.3.2",
         "vitest": "^1.0.0"
     },
