feat: add connection and project binding management commands
- Add manage-connections.ts: UI for managing SonarQube connections (view/test/details/delete)
- Add manage-project-binding.ts: UI for managing project bindings (view/change/clear)
- Update package.json: Add manageConnections and manageProjectBinding commands
- Update extension.ts: Register new command handlers
- Add docker-compose.yml: Local SonarQube development environment setup

These commands provide a better user experience for managing SonarQube configurations
without needing to manually edit VS Code settings.

--- a/package.json
+++ b/package.json
@@ -64,10 +64,22 @@
                 "icon": "$(add)"
             },
             {
+                "command": "gooseSonarQube.manageConnections",
+                "title": "Manage SonarQube Connections",
+                "category": "Goose SonarQube",
+                "icon": "$(settings-gear)"
+            },
+            {
                 "command": "gooseSonarQube.bindProject",
                 "title": "Bind to SonarQube Project",
                 "category": "Goose SonarQube",
                 "icon": "$(link)"
+            },
+            {
+                "command": "gooseSonarQube.manageProjectBinding",
+                "title": "Manage Project Binding",
+                "category": "Goose SonarQube",
+                "icon": "$(settings)"
             },
             {
                 "command": "gooseSonarQube.testConnection",
