--- a/package.json
+++ b/package.json
@@ -86,6 +86,18 @@
                 "title": "Analyze Project with SonarQube",
                 "category": "Goose SonarQube",
                 "icon": "$(search)"
+            },
+            {
+                "command": "gooseSonarQube.manageConnections",
+                "title": "Manage SonarQube Connections",
+                "category": "Goose SonarQube",
+                "icon": "$(settings-gear)"
+            },
+            {
+                "command": "gooseSonarQube.manageProjectBinding",
+                "title": "Manage Project Binding",
+                "category": "Goose SonarQube",
+                "icon": "$(project)"
             }
         ],
         "keybindings": [
