Enhance development experience and SonarQube integration
- Introduced a comprehensive DEVELOPMENT.md guide for building, packaging, and testing the extension.
- Added esbuild.js for optimized build processes, replacing TypeScript compiler for production builds.
- Updated .vscodeignore to include new configuration files and exclude unnecessary directories.
- Refined package.json and package-lock.json to reflect version updates and new dependencies.
- Improved README with installation instructions and usage details for new commands.
- Added a new icon for the extension to enhance visual representation in VS Code.

This update significantly improves the development workflow and user experience for the Goose SonarQube extension.

--- a/.vscodeignore
+++ b/.vscodeignore
@@ -5,14 +5,20 @@ src/**
 tsconfig.json
 tslint.json
 .eslintrc.json
+eslint.config.js
+esbuild.js
 .prettierrc
+.prettierignore
 .gitignore
 .git/**
+.github/**
+.claude/**
 
 # Test files
 **/__tests__/**
 **/*.test.ts
 **/*.spec.ts
+vitest.config.ts
 
 # Documentation
 *.md
@@ -26,6 +32,9 @@ node_modules/**
 *.map
 *.log
 
+# Docker and other configs
+docker/**
+
 # Keep compiled JavaScript and resources
-!dist/**
+!dist/extension.js
 !resources/**
