--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,16 @@ jobs:
             exit 1
           fi
           echo "Build successful: dist directory exists"
+      
+      - name: Package extension
+        run: npm run package
+      
+      - name: Upload VSIX artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: vsix-package
+          path: '*.vsix'
+          retention-days: 7
 
   lint:
     name: Lint
@@ -109,4 +119,3 @@ jobs:
       
       - name: Type check
         run: npx tsc --noEmit
-
