chore: update package.json and CI workflows for improved module support and error handling
- Added "type": "module" to package.json to enable ES module support.
- Updated CI workflows to ensure that ESLint, Prettier, and build steps fail on errors, enhancing reliability.
- Introduced verification step for VSIX file existence before publishing to ensure successful deployment.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,9 +96,11 @@ jobs:
       
       - name: Run ESLint
         run: npm run lint
+        continue-on-error: false
       
       - name: Check Prettier formatting
         run: npm run format:check
+        continue-on-error: false
 
   type-check:
     name: Type Check
