--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "displayName": "Goose SonarQube",
     "description": "SonarQube integration and Git change analysis for VS Code",
     "version": "0.2.0",
+    "type": "module",
     "publisher": "kuochunchang",
     "icon": "resources/icons/extension-icon.jpg",
     "engines": {
