--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,17 +33,26 @@ jobs:
 
       - name: Run tests
         run: npm test
+        continue-on-error: false
 
       - name: Run linter
         run: npm run lint
+        continue-on-error: false
 
       - name: Build extension
         run: npm run build
+        continue-on-error: false
 
       - name: Package extension
         run: npm run package
-        env:
-          VSCE_PAT: ${{ secrets.VSCE_PAT }}
+
+      - name: Verify VSIX file exists
+        run: |
+          if [ ! -f *.vsix ]; then
+            echo "Error: VSIX file not found"
+            exit 1
+          fi
+          ls -lh *.vsix
 
       - name: Upload VSIX artifact
         uses: actions/upload-artifact@v4
@@ -53,13 +62,16 @@ jobs:
           retention-days: 30
 
       - name: Publish to VS Code Marketplace
-        if: github.event_name == 'release' || github.event_name == 'push'
-        run: npx @vscode/vsce publish -p ${{ secrets.VSCE_PAT }}
+        if: (github.event_name == 'release' || github.event_name == 'push') && secrets.VSCE_PAT != ''
+        run: |
+          VSIX_FILE=$(ls *.vsix | head -n 1)
+          npx @vscode/vsce publish "$VSIX_FILE" -p ${{ secrets.VSCE_PAT }}
 
       - name: Publish to Open VSX Registry
-        if: github.event_name == 'release' || github.event_name == 'push'
+        if: (github.event_name == 'release' || github.event_name == 'push') && secrets.OPEN_VSX_TOKEN != ''
         run: |
-          npx ovsx publish *.vsix -p ${{ secrets.OPEN_VSX_TOKEN }}
+          VSIX_FILE=$(ls *.vsix | head -n 1)
+          npx -y ovsx publish "$VSIX_FILE" -p ${{ secrets.OPEN_VSX_TOKEN }}
         continue-on-error: true
 
       - name: Create GitHub Release (for tag push)
