Fix/lint and format errors (#6)
* fix: resolve all ESLint and Prettier formatting errors

- Fix Prettier formatting issues in ReportExporter.ts
- Fix Prettier formatting issues in SonarQubeService.ts
- Fix Prettier formatting issues in git-analysis-service.ts
- Fix Prettier formatting issues in git-change-panel.ts
- All build and test checks passing
- ESLint shows 0 errors (only warnings remain)

* Remove outdated documentation files related to issue display and dual marketplace setup. These files included detailed guides and feature summaries that are no longer relevant to the current project structure and functionality.

* Remove outdated GitHub Actions workflows documentation from the repository. This file contained detailed descriptions of CI/CD processes that are no longer relevant to the current project structure.

* refactor: update MergeService configuration and enhance GitAnalysisService rule details

- Refactored MergeService to improve type safety by omitting and picking specific properties from MergeConfig.
- Expanded rule details in GitAnalysisService to include optional fields for better issue context and resolution guidance.

* refactor: improve type safety in MergeService configuration

- Updated the MergeService configuration to enhance type safety by refining the use of Omit and Pick on MergeConfig properties. This change ensures better clarity and maintainability of the configuration structure.

* chore: update package.json and CI workflows for improved module support and error handling

- Added "type": "module" to package.json to enable ES module support.
- Updated CI workflows to ensure that ESLint, Prettier, and build steps fail on errors, enhancing reliability.
- Introduced verification step for VSIX file existence before publishing to ensure successful deployment.

* refactor: migrate to ES module syntax and enhance import statements

- Changed `require` to `import` for esbuild in esbuild.js to align with ES module standards.
- Updated import

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,6 +66,16 @@ jobs:
             exit 1
           fi
           echo "Build successful: dist directory exists"
+      
+      - name: Package extension
+        run: npm run package
+      
+      - name: Upload VSIX artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: vsix-package
+          path: '*.vsix'
+          retention-days: 7
 
   lint:
     name: Lint
@@ -86,9 +96,11 @@ jobs:
       
       - name: Run ESLint
         run: npm run lint
+        continue-on-error: false
       
       - name: Check Prettier formatting
         run: npm run format:check
+        continue-on-error: false
 
   type-check:
     name: Type Check
@@ -109,4 +121,3 @@ jobs:
       
       - name: Type check
         run: npx tsc --noEmit
-
