--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,49 +1,99 @@
 name: Release
 
 on:
+  push:
+    tags:
+      - 'v*'  # Trigger on version tags like v1.0.0
   release:
     types: [created]
   workflow_dispatch:
     inputs:
       version:
         description: 'Version to release (e.g., 1.0.0)'
-        required: true
+        required: false
         type: string
 
 jobs:
   release:
-    name: Release VS Code Extension
+    name: Build and Publish
     runs-on: ubuntu-latest
     
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
           cache: 'npm'
-      
+
       - name: Install dependencies
         run: npm ci
-      
-      - name: Build project
+
+      - name: Run tests
+        run: npm test
+        continue-on-error: false
+
+      - name: Run linter
+        run: npm run lint
+        continue-on-error: false
+
+      - name: Build extension
         run: npm run build
-      
+        continue-on-error: false
+
       - name: Package extension
         run: npm run package
-        env:
-          VSCE_PAT: ${{ secrets.VSCE_PAT }}
-      
+
+      - name: Verify VSIX file exists
+        run: |
+          if [ ! -f *.vsix ]; then
+            echo "Error: VSIX file not found"
+            exit 1
+          fi
+          ls -lh *.vsix
+
       - name: Upload VSIX artifact
         uses: actions/upload-artifact@v4
         with:
           name: extension-vsix
           path: '*.vsix'
           retention-days: 30
-      
-      - name: Publish to VS Code Marketplace
-        if: github.event_name == 'release'
-        run: npx @vscode/vsce publish -p ${{ secrets.VSCE_PAT }}
 
+      - name: Publish to VS Code Marketplace
+        if: (github.event_name == 'release' || github.event_name == 'push') && secrets.VSCE_PAT != ''
+        run: |
+          VSIX_FILE=$(ls *.vsix | head -n 1)
+          npx @vscode/vsce publish "$VSIX_FILE" -p ${{ secrets.VSCE_PAT }}
+
+      - name: Publish to Open VSX Registry
+        if: (github.event_name == 'release' || github.event_name == 'push') && secrets.OPEN_VSX_TOKEN != ''
+        run: |
+          VSIX_FILE=$(ls *.vsix | head -n 1)
+          npx -y ovsx publish "$VSIX_FILE" -p ${{ secrets.OPEN_VSX_TOKEN }}
+        continue-on-error: true
+
+      - name: Create GitHub Release (for tag push)
+        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: '*.vsix'
+          generate_release_notes: true
+          body: |
+            ## 安装方式
+            
+            ### VS Code Marketplace
+            ```bash
+            code --install-extension kuochunchang.goose-sonarqube-vscode
+            ```
+            
+            ### Open VSX Registry
+            ```bash
+            code --install-extension kuochunchang.goose-sonarqube-vscode
+            ```
+            
+            ### 手动安装
+            下载下方的 `.vsix` 文件并通过 VS Code 安装
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
