refactor: remove unused version input parameter from release workflow
The version parameter was defined but never used in the workflow.
Manual triggers (workflow_dispatch) are primarily for testing the build process,
and version is automatically determined from git tags during actual releases.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,12 +6,7 @@ on:
       - 'v*'  # Trigger on version tags like v1.0.0
   release:
     types: [created]
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version to release (e.g., 1.0.0)'
-        required: false
-        type: string
+  workflow_dispatch:  # Manual trigger for testing build process
 
 jobs:
   release:
