fix: use --packagePath flag for vsce publish command
The vsce publish command requires --packagePath flag when publishing a pre-built VSIX file.
Without this flag, it incorrectly interprets the filename as a version number.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -74,7 +74,7 @@ jobs:
             exit 0
           fi
           VSIX_FILE=$(ls *.vsix | head -n 1)
-          npx @vscode/vsce publish "$VSIX_FILE" -p "$VSCE_PAT"
+          npx @vscode/vsce publish --packagePath "$VSIX_FILE" -p "$VSCE_PAT"
 
       - name: Publish to Open VSX Registry
         if: github.event_name == 'release' || github.event_name == 'push'
