--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,8 @@ jobs:
   release:
     name: Build and Publish
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Required to create releases and upload assets
     
     steps:
       - name: Checkout code
