feat: add export issues command with quality and severity filters
- Add new command 'Export All SonarQube Issues' (gooseSonarQube.exportIssues)
- Support pagination for fetching all issues from SonarQube
- Enrich issues with rule details (description, remediation steps)
- Support SonarQube 25.x Clean Code impacts severity mapping
- Add multi-select filters for Software Quality (Security, Reliability, Maintainability)
- Add multi-select filters for Severity levels (Critical, High, Medium, Low, Info)
- Export to multiple formats: Markdown, HTML, JSON
- Display filter criteria in exported reports
- Fix progress notification hanging issue

--- a/package.json
+++ b/package.json
@@ -103,6 +103,12 @@
                 "title": "Manage Project Binding",
                 "category": "Goose SonarQube",
                 "icon": "$(project)"
+            },
+            {
+                "command": "gooseSonarQube.exportIssues",
+                "title": "Export All SonarQube Issues",
+                "category": "Goose SonarQube",
+                "icon": "$(export)"
             }
         ],
         "keybindings": [
